crates/amalgam-parser/tests/snapshots/practical_usage_snapshot_test__package_structure.snap
---
source: crates/amalgam-parser/tests/practical_usage_snapshot_test.rs
expression: snapshot_content
---
SUCCESS: false

OUTPUT:
STDERR:
error: non mergeable terms
     ┌─ <stdlib/std.ncl>:1331:9
     │  
1331 │ ╭         %contract/custom% (fun label value =>
1332 │ │           if pred value then
1333 │ │             'Ok value
1334 │ │           else
1335 │ │             'Error {}
1336 │ │         ),
     │ ╰─────────^ cannot merge this expression
     │  
     ┌─ /Users/jtoft/src/ai/amalgam/test_snapshot_temp_80558_2.ncl:35:48
     │
  35 │     int_or_string_works = k8s.v0.IntOrString & "test",
     │                           ---------------------^^^^^^
     │                           │                    │
     │                           │                    with this expression
     │                           originally merged here
     │
     = Merge operands have the same merge priority but they can't be combined.
     = One value is of type String while the other is of type CustomContract
     = Values of different types can't be merged


STDOUT:
